--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,15 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  background-color: beige;
+}
+.body{
+  background-image: url('bg.jpg');
+  background-color: beige;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
